[package]
name = "bevy_activation"
description = "A simple Entity activation manager for Bevy"
version = "0.4.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/foxzool/bevy_activation"
authors = ["FoxZoOL <zhooul@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["bevy", "ecs", "plugin", "wasm"]

[dependencies]
bevy_app = "0.16.0-rc.2"
bevy_ecs = "0.16.0-rc.2"
bevy_reflect = "0.16.0-rc.2"
bevy_time = "0.16.0-rc.2"


[dev-dependencies]
bevy = { version = "0.16.0-rc.2", default-features = false, features = ["bevy_log"] }


[[example]]
name = "timeout"
path = "example/timeout.rs"