[package]
name = "bevy_activation"
description = "A simple Entity activation manager for Bevy"
version = "0.4.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/foxzool/bevy_activation"
authors = ["FoxZoOL <zhooul@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["bevy", "ecs", "plugin", "wasm"]

[dependencies]
bevy_app = "0.17.1"
bevy_ecs = "0.17.1"
bevy_reflect = "0.17.1"
bevy_time = "0.17.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", default-features = false, features = [
    "wasm_js",
] }


[dev-dependencies]
bevy = { version = "0.17.1", default-features = false, features = ["bevy_log"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { version = "0.3", default-features = false, features = [
    "wasm_js",
] }


[[example]]
name = "timeout"
path = "example/timeout.rs"