[package]
name = "bevy_activation"
description = "A simple Entity activation manager for Bevy"
version = "0.5.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/foxzool/bevy_activation"
authors = ["FoxZoOL <zhooul@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["bevy", "ecs", "plugin", "wasm"]

[dependencies]
bevy_app = "0.18.0"
bevy_ecs = "0.18.0"
bevy_reflect = "0.18.0"
bevy_time = "0.18.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", default-features = false, features = [
    "wasm_js",
] }


[dev-dependencies]
bevy = { version = "0.18.0", default-features = false, features = ["bevy_log"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { version = "0.3", default-features = false, features = [
    "wasm_js",
] }


[[example]]
name = "timeout"
path = "example/timeout.rs"